# priobike-tracking-service

./: .gitignore  Dockerfile  Jenkinsfile  README.md  dev.env  docker-compose.test.yml  docker-compose.yml  example-track.json  example.json  pyproject.toml  run-dev.sh  run-postgres.sh  run-preheating.sh  run-server.sh
.github/workflows/: publish.yaml  test.yaml
backend/answers/: apps.py  models.py  urls.py  views.py
backend/answers/migrations/: 0001_initial.py  0002_alter_answer_options.py  0003_rename_device_id_answer_user_id.py  0004_remove_answer_app_version_remove_answer_device_type.py
backend/backend/: settings.py  urls.py  views.py
backend/monitoring/: apps.py  urls.py  views.py
backend/monitoring/management/commands/: generate_metrics.py
backend/sync/: apps.py  urls.py  views.py
backend/sync/management/commands/: sync.py
backend/tracks/: admin.py  apps.py  fields.py  models.py  urls.py  views.py
backend/tracks/management/commands/: clean_up.py  generate_metrics.py
backend/tracks/migrations/: 0001_initial.py  0002_track_device_id_track_device_type.py  0003_rename_device_id_track_user_id.py  0004_track_session_id.py  0005_rename_raw_track_metadata_track_accelerometer_csv_and_more.py  0006_track_activity_type_track_bike_type_and_more.py  0007_track_avg_battery_consumption_and_more.py  0008_remove_track_can_battery_analysis_and_more.py
nginx_inner/conf.d/: default.conf
nginx_outer/conf.d/: default.conf
