[tool.poetry]
name = "priobike-tracking-service"
version = "1.0.0"
description = "A microservice that obtains tracks and feedback from users."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.7"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
pandas = "^2.2.2"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
